<resources>
    <string name="app_name">PRN</string>

    <string name="select_godown">Select Godown : </string>
    <string name="please_select_vendor">Please Select Vendor</string>

    <string name="delete_button_text">Delete</string>

    <string-array name="godown_options">
        <item>Select Godown</item>
        <item>LANE 1</item>
        <item>LANE 2</item>
        <item>LANE 3</item>
        <item>LANE 4</item>
    </string-array>

    <string-array name="hamali_type_options">
        <item>Regular</item>
        <item>Crossing</item>
    </string-array>

    <string name="create_prn">Create PRN</string>
    <string name="auto_create_prn">Auto</string>
    <string name="companywise_create_prn">Company Wise</string>
    <string name="arrival_prn">Arrival PRN</string>
    <string name="arrival"> Arrival </string>
    <string name="prn_list">PRN List</string>
    <string name="lrno_pending_for_prn">LR Pending For PRN</string>

    <string name="user_name_prefix">User : %s</string>

    <string name="from_date">From Date:</string>
    <string name="to_date">To Date:</string>
    <string name="contract_party">Contract Party:</string>

    <string name="vehicle_number">Vehicle No:</string>
    <string name="prn_number">"PRN Number "</string>
    <string name="date_range">"Date Range "</string>
    <string name="search">Search</string>
    <string name="enter_contract_party">Enter Contract Party</string>
    <string name="selected_contract_party">Selected Contract Party</string>
    <string name="godown_lr">Godown LR</string>
    <string name="lr_no">LR No :</string>
    <string name="enter_lr_no">Enter LR No</string>
    <string name="add_lr_sign">+</string>
    <string name="enter_remark">Enter Remark</string>
    <string name="remark">Remark :</string>
    <string name="submit">Submit</string>
    <string name="log_in">Log In</string>
    <string name="get_lr_numbers">Get LR Numbers</string>
    <string name="total_box_qty">Total Box Qty:</string>
    <string name="total_bag_weight">Total Bag Weight:</string>
    <string name="hamali_vendor_name">Hamali vendor Name:</string>
    <string name="hamali_type">Hamali Type :</string>
    <string name="hamali_amount">Hamali Amount:</string>
    <string name="deduction_amount">Deduction Amount:</string>
    <string name="amount_paid_to_hvendor">Amount Paid To HVendor:</string>
    <string name="check">Check</string>
    <string name="show_report">Show Missmatch Report</string>
    <string name="select_one_option">Select One Option :</string>
    <string name="unloading">UnLoading</string>
    <string name="without_unloading">Without UnLoading</string>
    <string name="freight">Freight :</string>
    <string name="calculated_values">Calculated Values</string>
    <string name="prn_app">PRN APP</string>
    <string name="remember_login">Remember Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="vtc3pl_services_ltd">VTC3PL SERVICES LTD.</string>
    <string name="lr_missmatch_report">LR Missmatch Report</string>
    <string name="godown_keeper_name">Godown Keeper Name:</string>
    <string name="get_data">Get Data</string>
    <string name="cancel_prn">Cancel PRN</string>
    <string name="edit_prn">Edit PRN</string>
    <string name="enter_prn_number">Enter PRN Number</string>
    <string name="ok">OK</string>
    <string name="excess">Excess</string>
    <string name="damage">Damage</string>
    <string name="bag_qty">Bag Qty</string>
    <string name="enter_bag_qty">Enter BAG Qty</string>
    <string name="box_qty">Box Qty</string>
    <string name="enter_box_qty">Enter Box Qty</string>
    <string name="add_lr">Add LR</string>
    <string name="add_excess_lr">Add Excess LR</string>
    <string name="add_damage_lr">Add Damage LR</string>
    <string name="select_all">Select All</string>
    <string name="sr_no">Sr No</string>
    <string name="lr_no_header">Lr No</string>
    <string name="mismatch">MISMATCH</string>

</resources>